tests/errors/array_constructor_with_asterisk_in_type_spec.f90
program array_constructor_with_asterisk_in_type_spec
    print *, [character(*) :: "a", "b", "ball", "cat"]
end program
